config/cluster-api-provider-openshift-assisted/controlplane/base/capoa-controlplane-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: capoa-controlplane-controller-manager
  labels:
    control-plane: capoa-controlplane-controller-manager
spec:
  podSelector:
    matchLabels:
      control-plane: capoa-controlplane-controller-manager
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector: {}
    - from:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: monitoring
      ports:
        - protocol: TCP
          port: 8080
    - ports:
        - protocol: TCP
          port: 9443
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-dns
      ports:
        - protocol: UDP
          port: 5353
        - protocol: TCP
          port: 5353
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
        - ipBlock:
            cidr: ::/0
      ports:
        - protocol: TCP
          port: 6443
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
        - ipBlock:
            cidr: ::/0
      ports:
        - protocol: TCP
          port: 443
